--- a/Projects/React/TicTacToeGame/src/styles.css
+++ b/Projects/React/TicTacToeGame/src/styles.css
@@ -70,6 +70,21 @@
     text-align: center;
     width: 34px;
   }
+
+  .resetButton {
+    background: greenyellow;
+    border: 1px solid #999;
+    float: left;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 50px;
+  }
   
   .board-row:after {
     clear: both;
